compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__call_snapshots@function_empty.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: let _ = call();
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "_",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:8:15,
                    kind: StaticCall(
                        StaticCall {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            name: SymbolName {
                                namespace: Some(
                                    PathRoot {
                                        segments: [],
                                    },
                                ),
                                name: Identifier {
                                    name: "call",
                                    location: <internal>:8:12,
                                },
                                location: <internal>:8:12,
                            },
                            type_arguments: [],
                            arguments: [],
                        },
                    ),
                },
            },
        ),
        location: <internal>:0:15,
    },
]
