compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__call_snapshots@function_generic.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "let _ = call::<T>(0, 1);"
---
[
    Statement {
        id: 0,
        kind: Variable(
            VariableDeclaration {
                id: 0,
                name: Identifier {
                    name: "_",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: 5871781006564002453,
                    location: <internal>:8:24,
                    kind: StaticCall(
                        StaticCall {
                            id: 5871781006564002453,
                            name: call,
                            type_arguments: [
                                Named {
                                    ty: Type {
                                        name: T,
                                        type_params: [],
                                        location: <internal>:15:16,
                                    },
                                    location: <internal>:15:16,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:18:19,
                                    kind: Literal(
                                        Literal {
                                            id: 11743562013128004906,
                                            location: <internal>:18:19,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 11743562013128004906,
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                                Expression {
                                    id: 17615343019692007359,
                                    location: <internal>:21:22,
                                    kind: Literal(
                                        Literal {
                                            id: 17615343019692007359,
                                            location: <internal>:21:22,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 17615343019692007359,
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            },
        ),
        location: <internal>:0:24,
    },
]
