compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__call_snapshots@method_generic.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "let _ = 1.call<T>(0, 1);"
---
[
    Statement {
        id: StatementId {
            def: ItemId {
                package: PackageId(
                    0,
                ),
                index: Idx(
                    0,
                ),
            },
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "_",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId {
                            package: PackageId(
                                0,
                            ),
                            index: Idx(
                                0,
                            ),
                        },
                        index: Idx(
                            1,
                        ),
                    },
                    kind: InstanceCall(
                        InstanceCall {
                            id: ExpressionId {
                                def: ItemId {
                                    package: PackageId(
                                        0,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                index: Idx(
                                    1,
                                ),
                            },
                            callee: Expression {
                                id: ExpressionId {
                                    def: ItemId {
                                        package: PackageId(
                                            0,
                                        ),
                                        index: Idx(
                                            0,
                                        ),
                                    },
                                    index: Idx(
                                        4,
                                    ),
                                },
                                kind: Literal(
                                    Literal {
                                        id: ExpressionId {
                                            def: ItemId {
                                                package: PackageId(
                                                    0,
                                                ),
                                                index: Idx(
                                                    0,
                                                ),
                                            },
                                            index: Idx(
                                                4,
                                            ),
                                        },
                                        kind: Int(
                                            IntLiteral {
                                                id: ExpressionId {
                                                    def: ItemId {
                                                        package: PackageId(
                                                            0,
                                                        ),
                                                        index: Idx(
                                                            0,
                                                        ),
                                                    },
                                                    index: Idx(
                                                        4,
                                                    ),
                                                },
                                                value: 1,
                                                kind: I32,
                                            },
                                        ),
                                        location: <internal>:8:9,
                                    },
                                ),
                                location: <internal>:8:9,
                            },
                            name: Callable {
                                name: Identifier {
                                    name: "call",
                                    location: <internal>:10:14,
                                },
                                type_arguments: [
                                    Type {
                                        id: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                8901637729188007634,
                                            ),
                                        },
                                        name: Path {
                                            root: [],
                                            name: Type {
                                                name: Identifier {
                                                    name: "T",
                                                    location: <internal>:15:16,
                                                },
                                                type_arguments: [],
                                                location: <internal>:15:16,
                                            },
                                            location: <internal>:15:16,
                                        },
                                        location: <internal>:15:16,
                                    },
                                ],
                                location: <internal>:10:18,
                            },
                            arguments: [
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            2,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    2,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                0,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            2,
                                                        ),
                                                    },
                                                    value: 0,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:18:19,
                                        },
                                    ),
                                    location: <internal>:18:19,
                                },
                                Expression {
                                    id: ExpressionId {
                                        def: ItemId {
                                            package: PackageId(
                                                0,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        index: Idx(
                                            3,
                                        ),
                                    },
                                    kind: Literal(
                                        Literal {
                                            id: ExpressionId {
                                                def: ItemId {
                                                    package: PackageId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        0,
                                                    ),
                                                },
                                                index: Idx(
                                                    3,
                                                ),
                                            },
                                            kind: Int(
                                                IntLiteral {
                                                    id: ExpressionId {
                                                        def: ItemId {
                                                            package: PackageId(
                                                                0,
                                                            ),
                                                            index: Idx(
                                                                0,
                                                            ),
                                                        },
                                                        index: Idx(
                                                            3,
                                                        ),
                                                    },
                                                    value: 1,
                                                    kind: I32,
                                                },
                                            ),
                                            location: <internal>:21:22,
                                        },
                                    ),
                                    location: <internal>:21:22,
                                },
                            ],
                            location: <internal>:10:24,
                        },
                    ),
                    location: <internal>:10:24,
                },
                location: <internal>:0:24,
            },
        ),
        location: <internal>:0:24,
    },
]
