compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__cast_snapshots@precedence_assign.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: let _ = 0 as u64;
---
[
    Statement {
        id: StatementId {
            def: ItemId(
                0,
            ),
            index: Idx(
                0,
            ),
        },
        kind: Variable(
            VariableDeclaration {
                id: StatementId {
                    def: ItemId(
                        0,
                    ),
                    index: Idx(
                        0,
                    ),
                },
                name: Identifier {
                    name: "_",
                    location: <internal>:4:5,
                },
                declared_type: None,
                value: Expression {
                    id: ExpressionId {
                        def: ItemId(
                            0,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:8:16,
                    kind: Cast(
                        Cast {
                            id: ExpressionId {
                                def: ItemId(
                                    0,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            source: Expression {
                                id: ExpressionId {
                                    def: ItemId(
                                        0,
                                    ),
                                    index: Idx(
                                        2,
                                    ),
                                },
                                location: <internal>:8:9,
                                kind: Literal(
                                    Literal {
                                        id: ExpressionId {
                                            def: ItemId(
                                                0,
                                            ),
                                            index: Idx(
                                                2,
                                            ),
                                        },
                                        location: <internal>:8:9,
                                        kind: Int(
                                            IntLiteral {
                                                id: ExpressionId {
                                                    def: ItemId(
                                                        0,
                                                    ),
                                                    index: Idx(
                                                        2,
                                                    ),
                                                },
                                                value: 0,
                                                kind: I32,
                                            },
                                        ),
                                    },
                                ),
                            },
                            target: Type {
                                id: ItemId(
                                    2586979368357421486,
                                ),
                                name: SymbolName {
                                    namespace: Some(
                                        PathRoot {
                                            segments: [],
                                        },
                                    ),
                                    name: Named(
                                        Identifier {
                                            name: "u64",
                                            location: <internal>:13:16,
                                        },
                                    ),
                                    location: <internal>:13:16,
                                },
                                type_params: [],
                                location: <internal>:13:16,
                            },
                        },
                    ),
                },
            },
        ),
        location: <internal>:0:17,
    },
]
